SBVTestSuite/TestSuite/CompileTests/SCase/SCase18.stderr
SCase18.hs:11:14: error: [GHC-39584]
    " SCase18.hs:14:16-20: sCase: Overlapping case constructors:
        Type       : Expr
        Constructor: Num i | i .< 3
      Overlaps with:
        SCase18.hs:13:16-20: Num i

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero           -> 0
               Num i -> 4
               Num i | i .< 3 -> i
               Var s          -> ite (s .== literal "a") 1 2
               Add a b        -> t e + t b
               Let _   _a  b  -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

